fixed main page file

--- a/html/contact.html
+++ b/html/contact.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <a href="index.html">דף הבית</a>
+        <a href="../index.html">דף הבית</a>
     </nav>
     <div class="container">
         <h1 class="brand"><span>GMAP</span> צור קשר</h1>
