--- a/html/map.html
+++ b/html/map.html
@@ -33,7 +33,7 @@
     <nav id="navbar">
         <div class="container">
             <ul>
-                <li><strong><a href="index.html">דף הבית</a> </strong> </li>
+                <li><strong><a href="../index.html">דף הבית</a> </strong> </li>
                 <li><strong><a href="garage_list.html">רשימת מוסכים</a> </strong> </li>
                 <li><strong><a id="signup-ref" href="signup.html">הרשמה</a></strong></li>
                 <li><strong><a id="login-ref" href="login.html">התחברות</a></strong></li>
