--- a/html/user_settings.html
+++ b/html/user_settings.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <a href="index.html">דף הבית</a>
+        <a href="../index.html">דף הבית</a>
     </nav>
     <header>
         <h1>עדכון פרטים</h1>
