--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GMAP</title>
-    <link rel="stylesheet" href="../css/homepage_style.css">
+    <link rel="stylesheet" href="css/homepage_style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         <p>Copyright &copy; 2022 Daniel Israelov & Omer Gez</p>
     </footer>
 
-    <script src="../JS/sessionHandler.js"></script>
+    <script src="JS/sessionHandler.js"></script>
 </body>
 
 </html>
