--- a/html/garage_list.html
+++ b/html/garage_list.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <a href="index.html">דף הבית</a>
+        <a href="../index.html">דף הבית</a>
     </nav>
     <table id="garages-table" style="width: 100%;">
         <thead id="table-head">
