--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <nav id="navbar">
         <div class="container">
             <ul>
-                <li><a href="map.html">מפה</a> |</li>
-                <li><a href="garage_list.html">רשימת מוסכים</a> |</li>
-                <li id="signup-li"><a id="signup-ref" href="signup.html">הרשמה</a> </li>
+                <li><a href="html/map.html">מפה</a> |</li>
+                <li><a href="html/garage_list.html">רשימת מוסכים</a> |</li>
+                <li id="signup-li"><a id="signup-ref" href="html/signup.html">הרשמה</a> </li>
                 <li>|</li>
-                <li id="login-li"><a id="login-ref" href="login.html">התחברות</a> </li>
+                <li id="login-li"><a id="login-ref" href="html/login.html">התחברות</a> </li>
                 <li>|</li>
-                <li><a href="contact.html">צור קשר</a></li>
+                <li><a href="html/contact.html">צור קשר</a></li>
             </ul>
         </div>
     </nav>
