translated info bubble to hebrew

--- a/html/map.html
+++ b/html/map.html
@@ -128,13 +128,13 @@
                         <td colspan="2">' + (feature.properties['Manager'] !== null ? autolinker.link(feature.properties['Manager'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Week days</strong><br />' + (feature.properties['Week days'] !== null ? autolinker.link(feature.properties['Week days'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>שעות פעילות א-ה</strong><br />' + (feature.properties['Week days'] !== null ? autolinker.link(feature.properties['Week days'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Friday</strong><br />' + (feature.properties['Friday'] !== null ? autolinker.link(feature.properties['Friday'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>שעות פעילות יום שישי</strong><br />' + (feature.properties['Friday'] !== null ? autolinker.link(feature.properties['Friday'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Rating</strong><br />' + (feature.properties['Rating'] !== null ? autolinker.link(feature.properties['Rating'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>דירוג</strong><br />' + (feature.properties['Rating'] !== null ? autolinker.link(feature.properties['Rating'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><a onClick=navigate() id=navLink href=map.html#12/' + autolinker.link(feature.geometry['coordinates'][1] + '/' + feature.geometry['coordinates'][0]) + '>נווט לכאן</a><br />' + '</td>\
